Oppdatert kodeverk trivia #deploy-test-dolly-backend